fix z-index for auto suggest to layer on top of the carousel indicators

--- a/app/styles/components/shared/_react_autosuggest.scss
+++ b/app/styles/components/shared/_react_autosuggest.scss
@@ -23,7 +23,7 @@
     border: 1px solid $input-border;
     background-color: #fff;
     font-size: $small-size;
-    z-index: 2;
+    z-index: 100;
     width: 100%;
   }
 
